# shacheck

./: CMakeLists.txt  LICENSE  README.md  main.cpp  picosha2.h  shacheck.cpp  shacheck.h  shacheck.ui
